Fix the letter-spacing on the 404 text.

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -65,4 +65,5 @@ form textarea {
 #not-found {
 	font-size: 3em;
 	text-shadow: 0 0 2px rgba(255,255,255,0.5);
+	letter-spacing: -1px;
 }
